// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormElement  should render correctly 1`] = `
<WithStyles(WithId)
  status="valid"
  value="George"
>
  <WithStyles(HvLabel)
    id="test"
    key="1"
    label="First name"
  >
    <WithStyles(HvBaseInput)
      id="id-test"
      placeholder="Insert your name"
    />
  </WithStyles(HvLabel)>
  <WithStyles(HvHelperText)
    id="infotext-main"
    key="2"
    notification="warning"
  >
    Write your name in this input do not put numbers
  </WithStyles(HvHelperText)>
</WithStyles(WithId)>
`;

exports[`FormElement  should render correctly 2`] = `
<WithStyles(HvBaseInput)
  id="id-test"
  placeholder="Insert your name"
/>
`;

exports[`FormElement  should render correctly 3`] = `
<WithStyles(HvHelperText)
  id="infotext-main"
  key="2"
  notification="warning"
>
  Write your name in this input do not put numbers
</WithStyles(HvHelperText)>
`;
